# TizuMark

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  demo.md  generate-icons.js  package-lock.json  package.json  promotion.md  update-windows-x86_64.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-28-scroll-sync-plan.md  2026-07-20-export-docx.md  2026-07-20-llm-translation.md  2026-07-22-docx-math-mermaid-fullscreen.md
docs/superpowers/specs/: 2026-06-28-scroll-sync-design.md  2026-07-11-image-assets-design.md  2026-07-20-export-docx-design.md  2026-07-20-llm-translation-design.md  2026-07-22-docx-math-mermaid-fullscreen-design.md
icon-concepts/: preview-bright.html  preview-c2-final.html  preview-c2-slanted.html  preview-c2-v2-alt.html  preview-clear.html  preview-final.html  preview-fixed.html  preview-refined.html  preview-v2.html  preview-v4v6.html  preview.html
icon-concepts/new-m/: compare-center.html  preview-done.html  preview-final.html  preview-mf.html  preview-v2.html  preview-v3.html  preview.html
lib/: export-docx-bundle.js
src/: app.js  demo.md  export-docx.js  guide.en.md  guide.md  index.html  styles.css  test-browser.html  test-unified-scroll.html  unified-renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: export-docx-bundle.js  unified-bundle.js
test/: export-docx.test.cjs
