[package]
name = "markdown-editor"
version = "0.1.0"
description = "A lightweight cross-platform Markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
dirs = "6"

[patch.crates-io]
brotli = { git = "https://github.com/dropbox/rust-brotli" }
