[package]
name = "tizumark"
version = "0.1.0"
description = "A lightweight cross-platform Markdown editor"
authors = ["TizuMark"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
dirs = "6"
reqwest = { version = "0.12", features = ["rustls-tls"] }
base64 = "0.22"

[patch.crates-io]
brotli = { git = "https://github.com/dropbox/rust-brotli", rev = "9cbed81a1a098fcd4ffcf956429dce6154415970" }
